Changed the padding-top for navbar-is-fixed-top to 73px to address white space appearing at top of hero. Left comment in layout.css

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -62,7 +62,7 @@ body.admin-menu.navbar-is-fixed-top {
 }
 	@media (min-width: 768px) {
 		body.navbar-is-fixed-top {
-			padding-top: 104px !important;
+			padding-top: 73px !important; /* changed from 104px to 73px to remove white spacing in wordpress*/
 		}
 		body.admin-menu.navbar-is-fixed-top {
 			padding-top:152px !important;
